{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 60,
  "lineage": "6058c4b9-78ab-ec7a-661d-250875bdb47c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "master0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.192.68.184",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-07-22T00:43:13.378-07:00",
            "id": "projects/run-ai-external/regions/us-central1/addresses/kube-mn-master0-public-address",
            "name": "kube-mn-master0-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "run-ai-external",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/addresses/kube-mn-master0-public-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/instances/kube-mn-master0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-07-22T01:27:43.596-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/run-ai-external/global/firewalls/default-allow-external",
            "log_config": [],
            "name": "default-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/default",
            "priority": 1000,
            "project": "run-ai-external",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/firewalls/default-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "net0_allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-07-21T21:25:03.260-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/run-ai-external/global/firewalls/net0-allow-external",
            "log_config": [],
            "name": "net0-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0",
            "priority": 1000,
            "project": "run-ai-external",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/firewalls/net0-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "net0_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-07-21T21:38:37.204-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/run-ai-external/global/firewalls/net0-allow-internal",
            "log_config": [],
            "name": "net0-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0",
            "priority": 1000,
            "project": "run-ai-external",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/firewalls/net0-allow-internal",
            "source_ranges": [
              "10.128.0.0/16",
              "10.44.1.0/24",
              "192.168.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "net1_allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-07-21T21:25:03.922-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/run-ai-external/global/firewalls/net1-allow-external",
            "log_config": [],
            "name": "net1-allow-external",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1",
            "priority": 1000,
            "project": "run-ai-external",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/firewalls/net1-allow-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "net1_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-07-21T21:38:37.397-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/run-ai-external/global/firewalls/net1-allow-internal",
            "log_config": [],
            "name": "net1-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1",
            "priority": 1000,
            "project": "run-ai-external",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/firewalls/net1-allow-internal",
            "source_ranges": [
              "10.128.0.0/16",
              "10.44.1.0/24",
              "192.168.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-8-v20210721",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/disks/kube-mn-master0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/run-ai-external/zones/us-central1-b/instances/kube-mn-master0",
            "instance_id": "2469956603300061040",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "eh07T5MFs80=",
            "metadata_startup_script": "echo \"1 rt1\" | sudo tee -a /etc/iproute2/rt_tables\nip route add 192.168.1.1 src 192.168.1.3 dev eth1 table rt1\nip route add default via 192.168.1.1 dev eth1 table rt1\nip rule add from 192.168.1.3/32 table rt1\nip rule add to 192.168.1.3/32 table rt1\n\n\"2 rt2\" | sudo tee -a /etc/iproute2/rt_tables\nip route add 10.44.1.1 src 10.44.1.3 dev eth2 table rt2\nip route add default via 10.44.1.1 dev eth2 table rt2\nip rule add from 10.44.1.3/32 table rt2\n [...]
            "name": "kube-mn-master0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.192.68.184",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/default",
                "network_ip": "10.128.0.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/default",
                "subnetwork_project": "run-ai-external"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0",
                "network_ip": "192.168.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net0-subnet0",
                "subnetwork_project": "run-ai-external"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1",
                "network_ip": "10.44.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net1-subnet0",
                "subnetwork_project": "run-ai-external"
              }
            ],
            "project": "run-ai-external",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/instances/kube-mn-master0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.net1",
            "google_compute_subnetwork.net0_subnet0",
            "google_compute_subnetwork.net1_subnet0",
            "google_compute_address.master0",
            "google_compute_network.net0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "n0_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210721",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/disks/kube-mn-n0-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/run-ai-external/zones/us-central1-b/instances/kube-mn-n0-0",
            "instance_id": "2150745949437513452",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "cobv4m8WK5I=",
            "name": "kube-mn-n0-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.134.145.3",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0",
                "network_ip": "192.168.1.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net0-subnet0",
                "subnetwork_project": "run-ai-external"
              }
            ],
            "project": "run-ai-external",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/instances/kube-mn-n0-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.net0",
            "google_compute_subnetwork.net0_subnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "n1_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20210720",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/disks/kube-mn-n1-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/run-ai-external/zones/us-central1-b/instances/kube-mn-n1-0",
            "instance_id": "4741752036663840491",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "cobv4m8WK5I=",
            "name": "kube-mn-n1-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.230.139",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1",
                "network_ip": "10.44.1.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net1-subnet0",
                "subnetwork_project": "run-ai-external"
              }
            ],
            "project": "run-ai-external",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/instances/kube-mn-n1-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.net1",
            "google_compute_subnetwork.net1_subnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "node_mn_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-8-v20210721",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/disks/kube-mn-n2-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/run-ai-external/zones/us-central1-b/instances/kube-mn-n2-0",
            "instance_id": "502572826785994931",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "sZF9t-R_JmM=",
            "metadata_startup_script": "echo \"1 rt1\" | sudo tee -a /etc/iproute2/rt_tables\nip route add 192.168.1.1 src 192.168.1.10 dev eth1 table rt1\nip route add default via 192.168.1.1 dev eth1 table rt1\nip rule add from 192.168.1.10/32 table rt1\nip rule add to 192.168.1.10/32 table rt1\n\necho \"2 rt2\" | sudo tee -a /etc/iproute2/rt_tables\nip route add 10.44.1.1 src 10.44.1.10 dev eth2 table rt2\nip route add default via 10.44.1.1 dev eth2 table rt2\nip rule add from 10.44.1.10/32 t [...]
            "name": "kube-mn-n2-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.232.184.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/default",
                "network_ip": "10.128.0.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/default",
                "subnetwork_project": "run-ai-external"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0",
                "network_ip": "192.168.1.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net0-subnet0",
                "subnetwork_project": "run-ai-external"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1",
                "network_ip": "10.44.1.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net1-subnet0",
                "subnetwork_project": "run-ai-external"
              }
            ],
            "project": "run-ai-external",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/zones/us-central1-b/instances/kube-mn-n2-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_subnetwork.net0_subnet0",
            "google_compute_subnetwork.net1_subnet0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "net0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/run-ai-external/global/networks/net0",
            "mtu": 0,
            "name": "net0",
            "project": "run-ai-external",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "net1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/run-ai-external/global/networks/net1",
            "mtu": 0,
            "name": "net1",
            "project": "run-ai-external",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "net0_subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-21T20:14:39.782-07:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/run-ai-external/regions/us-central1/subnetworks/net0-subnet0",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "net0-subnet0",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net0",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "run-ai-external",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net0-subnet0"
          },
          "dependencies": [
            "google_compute_network.net0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "net1_subnet0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-21T20:14:39.144-07:00",
            "gateway_address": "10.44.1.1",
            "id": "projects/run-ai-external/regions/us-central1/subnetworks/net1-subnet0",
            "ip_cidr_range": "10.44.1.0/24",
            "name": "net1-subnet0",
            "network": "https://www.googleapis.com/compute/v1/projects/run-ai-external/global/networks/net1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "run-ai-external",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/run-ai-external/regions/us-central1/subnetworks/net1-subnet0"
          },
          "dependencies": [
            "google_compute_network.net1"
          ]
        }
      ]
    }
  ]
}